# happyr

./: .gitignore  LICENSE  Makefile  README.bashdown  README.md  pyproject.toml
happyr/: __init__.py  cli.py  cliactions.py  helpers.py  main.py  version.py
tests/: test_cli.py  test_helpers.py  test_version.py
