[tool.poetry]
name = "happyr"
version = "0.1.0"
description = "Brings R's {styler} and {lintr} packages to the command line"
authors = ["Mark Sellors <github@5vcc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
happyr = "happyr:main"
